:sparkles: initiating home page content

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -8,10 +8,7 @@
         <a>
             <mat-icon>home</mat-icon>
         </a>
-        <span>Sistema de Cadastro de Produtos - </span>
+        <span>Sistema de Cadastro de Produtos - Início</span>
         &nbsp;
-        <span>{{ myName }}</span>
     </span>
 </mat-toolbar>
-
-<app-sidenav (changeHome)="onChangeHome()" (changeList)="onChangeList()"></app-sidenav>
