--- a/frontend/src/app/components/sidenav/sidenav.component.css
+++ b/frontend/src/app/components/sidenav/sidenav.component.css
@@ -19,3 +19,7 @@ mat-list > mat-list-item {
 mat-icon {
     padding-right: 10px;
 }
+.content {
+    padding: 16px;
+    background-color: #fff;
+}
