--- a/frontend/src/app/components/sidenav/sidenav.component.html
+++ b/frontend/src/app/components/sidenav/sidenav.component.html
@@ -1,9 +1,11 @@
 <mat-drawer-container class="example-container">
     <mat-drawer mode="side" opened class="example-sidenav">
         <mat-list role="list">
-            <mat-list-item role="listitem" (click)="home()"><mat-icon>home</mat-icon> Início</mat-list-item>
-            <mat-list-item role="listitem" (click)="list()"><mat-icon>list</mat-icon> Lista</mat-list-item>
+            <mat-list-item role="listitem"><mat-icon>home</mat-icon> Início</mat-list-item>
+            <mat-list-item role="listitem"><mat-icon>list</mat-icon> Lista</mat-list-item>
         </mat-list>
     </mat-drawer>
-    <mat-drawer-content>Main content</mat-drawer-content>
+    <mat-drawer-content class="content">
+        <app-home></app-home>
+    </mat-drawer-content>
 </mat-drawer-container>
