:sparkles: creating routes

--- a/frontend/src/app/components/sidenav/sidenav.component.html
+++ b/frontend/src/app/components/sidenav/sidenav.component.html
@@ -1,11 +1,15 @@
 <mat-drawer-container class="example-container">
     <mat-drawer mode="side" opened class="example-sidenav">
         <mat-list role="list">
-            <mat-list-item role="listitem"><mat-icon>home</mat-icon> Início</mat-list-item>
-            <mat-list-item role="listitem"><mat-icon>list</mat-icon> Lista</mat-list-item>
+            <a routerLink="/">
+                <mat-list-item role="listitem" class="link-option"><mat-icon>home</mat-icon> Início</mat-list-item>
+            </a>
+            <a routerLink="/list">
+                <mat-list-item role="listitem" class="link-option"><mat-icon>list</mat-icon> Lista</mat-list-item>
+            </a>
         </mat-list>
     </mat-drawer>
     <mat-drawer-content class="content">
-        <app-home></app-home>
+        <router-outlet></router-outlet>
     </mat-drawer-content>
 </mat-drawer-container>
