:sparkles: creating interface and service

--- a/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/frontend/src/app/components/product/product-create/product-create.component.html
@@ -1,1 +1,6 @@
-<p>product-create works!</p>
+<button mat-stroked-button (click)="deleteProduct()" aria-label="Show an example snack-bar">
+    Excluir
+</button>
+<button mat-stroked-button (click)="createProduct()" aria-label="Show an example snack-bar" color="primary">
+    Salvar
+</button>
