--- a/frontend/src/app/views/product-list/product-list.component.html
+++ b/frontend/src/app/views/product-list/product-list.component.html
@@ -1,1 +1,3 @@
-<button mat-stroked-button (click)="navigateToProductCreate()">Novo Produto</button>
+<button mat-stroked-button (click)="navigateToProductCreate()" color="primary">Novo Produto</button>
+
+<app-product-read></app-product-read>
