:sparkles: printing backend data on html template

--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -1,1 +1,7 @@
-<p>product-read works!</p>
+<ul>
+    <li *ngFor="let product of products">
+        Nome: {{ product.name }}
+        <br>
+        Preço: {{ product.price }}
+    </li>
+</ul>
