--- a/frontend/src/app/views/product-list/product-list.component.html
+++ b/frontend/src/app/views/product-list/product-list.component.html
@@ -1,3 +1,5 @@
 <button mat-stroked-button (click)="navigateToProductCreate()" color="primary">Novo Produto</button>
 
 <app-product-read></app-product-read>
+<app-table-model></app-table-model>
+<br><br><br><br><br>
