--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -1,12 +1,4 @@
-<ul>
-    <li *ngFor="let product of products">
-        Nome: {{ product.name }}
-        <br>
-        Preço: {{ product.price }}
-    </li>
-</ul>
-
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8" style="margin-top: 50px;">
     <table mat-table class="full-width-table" matSort aria-label="Elements" [dataSource]="products">
       <!-- Id Column -->
       <ng-container matColumnDef="id">
@@ -24,6 +16,20 @@
       <ng-container matColumnDef="price">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Preço</th>
         <td mat-cell *matCellDef="let row">{{row.price | currency: 'BRL'}}</td>
+      </ng-container>
+
+      <!-- Action Column -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Ação</th>
+        <td mat-cell *matCellDef="let row">
+          <a routerLink="" style="color: blue">
+            <mat-icon>edit</mat-icon>
+          </a>
+          &nbsp;
+          <a routerLink="" style="color: red">
+            <mat-icon>delete</mat-icon>
+        </a>
+        </td>
       </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
