--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -22,7 +22,7 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Ação</th>
         <td mat-cell *matCellDef="let row">
-          <a routerLink="" style="color: blue">
+          <a routerLink="/product/update/{{ row.id }}" style="color: blue">
             <mat-icon>edit</mat-icon>
           </a>
           &nbsp;
