:zap: finishing project

--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -5,10 +5,10 @@
         </a>
     </span>
     <span class="title-group">
-        <a>
-            <mat-icon>home</mat-icon>
+        <a routerLink="{{ routeUrl }}">
+            <mat-icon>{{ icon }}</mat-icon>
+            <span>Sistema de Cadastro de Produtos - {{ title }}</span>
         </a>
-        <span>Sistema de Cadastro de Produtos - Início</span>
         &nbsp;
     </span>
 </mat-toolbar>
